# konsole

./: .arcconfig  .craft.ini  .editorconfig  .flatpak-manifest.json  .flatpak-manifest.json.license  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  BRANCH-INFO  BUILD.md  CHANGELOG  CHANGES-4.0  CMakeLists.txt  CONTRIBUTORS  COPYING.Unicode  ChangeLog  Copyright  DEVELOPERS  KNOWN-ISSUES-4.0  Konsole2.Requierements  Konsole2.Requirements  LICENSE.readme  Mainpage.dox  Makefile.am  NEWS  PROJECTS  README  README-BEFORE-HACKING-KDE4  README.bugs  README.color.schema  README.fonts  README.keyboard  README.konsole_kiosk  README.linux.console  README.md  README.ports  README.unicode  (+20 more)
config/var/: AUTHORS  CONTRIBUTORS  Copyright  Makefile.am.aside  Makefile.cvs  NEWS  README.install  README.linux.console  TODO  acconfig.h  configure.in
data/color-schemes/: BlackOnLightYellow.colorscheme  BlackOnRandomLight.colorscheme  BlackOnWhite.colorscheme  BlueOnBlack.colorscheme  Breeze.colorscheme  CMakeLists.txt  Campbell.colorscheme  DarkPastels.colorscheme  GreenOnBlack.colorscheme  Linux.colorscheme  RedOnBlack.colorscheme  Solarized.colorscheme  SolarizedLight.colorscheme  WhiteOnBlack.colorscheme
data/keyboard-layouts/: CMakeLists.txt  README-KeyTab  README.KeyTab  default.keytab  linux.keytab  macos.keytab  solaris.keytab  vt420pc.keytab  windows.keytab
data/updaters/: CMakeLists.txt  konsole-2.10.0-remove-menuindex-from-profiles.sh  konsole-2.9.0-colorscheme-bold-key.sh  konsole-2.9.0-global-options.sh  konsole.upd  konsole_remove_background_mode.upd
desktop/: CMakeLists.txt  konsole-script.desktop  konsole.desktop  konsole.khotkeys  konsole.notifyrc  konsole.qrc  konsolehere.desktop  konsolepart.desktop  konsolerun.desktop  konsolesu.desktop  konsoleui.rc  kwrited.desktop  org.kde.konsole.appdata.xml  org.kde.konsole.desktop  partui.rc  quick-access-konsole.desktop  sessionui.rc  terminalemulator.desktop
doc/: CMakeLists.txt  Makefile.am  README.first  color-schema  framework  gpl.html  histBuffer  konsole.Doxyfile  missing.codes  missing.keys  mkDocs
doc/More/: Ansi_esc.txt  Eterm.ref  ansix364.txt  dec_vt100_codes.txt  k95vtnttn.html  rxvt-ref.html  villanova-vt100-esc-codes.txt  vt100_numeric_keypad.txt  vt100_reference_card.txt  vt100_scroll_region.txt  xterm.codes
doc/VT100/: CMakeLists.txt  Makefile.am  Table.Codes  Table.Control  Table.Graphic  awk.table.control  awk.table.graphic  cmds.pro  db.trans  genDocument  genPl.pl  genTC.pl  techref.html
doc/developer/: MAINTAINER.README  README  commit-template  pre-push
doc/manual/: CMakeLists.txt  README  index.docbook  kde4.notes
doc/sgml/: Makefile.am  konsole-1.html  konsole-2.html  konsole-3.html  konsole-4.html  konsole-5.html  konsole.html  konsole.nif  konsole.sgml  m
doc/user/: README.fonts  README.keyboard  README.linux.console
fonts/: 9x15.bdf  Makefile.am  console8x16.bdf  cp437.charmap
kconf_update/: CMakeLists.txt  konsole.upd  konsole_add_hamburgermenu_to_toolbar.sh  konsole_globalaccel.cpp  konsole_globalaccel.upd  konsole_show_menubar.cpp
konsole/: Application.cpp  Application.h  BlockArray.cpp  BlockArray.h  BookmarkHandler.cpp  BookmarkHandler.h  CMakeLists.txt  ColorScheme.cpp  ColorScheme.h  ColorSchemeEditor.cpp  ColorSchemeEditor.h  EditProfileDialog.cpp  EditProfileDialog.h  EditProfileDialog.ui  EditSessionDialog.cpp  EditSessionDialog.h  EditSessionDialog.ui  EditTabTitleFormatDialog.cpp  EditTabTitleFormatDialog.ui  Emulation.cpp  Emulation.h  Filter.cpp  Filter.h  History.cpp  History.h  HistorySizeDialog.cpp  HistorySizeDialog.h  IncrementalSearchBar.cpp  IncrementalSearchBar.h  KeyBindingEditor.cpp  KeyBindingEditor.h  KeyTrans.cpp  KeyTrans.h  KeyboardTranslator.cpp  KeyboardTranslator.h  KonsoleApp.cpp  KonsoleApp.h  KonsoleBookmarkHandler.cpp  KonsoleBookmarkHandler.h  KonsoleMainWindow.cpp  (+129 more)
konsole/old/: konsole.cpp  konsole_part.cpp  main.cpp  schema.h
other/: 2shells  3shells  4shells  5shells  BlackOnLightColor.schema  BlackOnLightColour.schema  CMakeLists.txt  DarkPicture.schema  GreenOnBlack.schema  GreenTint.schema  GreenTint_MC.schema  LightPaper.schema  LightPicture.schema  Makefile.am  Paper.schema  README  README.Desktop  README.KeyTab  README.Schema  README.default.Keytab  README.schema  Transparent.schema  Transparent_MC.schema  Transparent_darkbg.schema  Transparent_lightbg.schema  brightness.xpm  colourness.xpm  contrast.xpm  default.Keytab  default.Schema  dselect.kdelnk  hisc-app-konsole.svgz  kcmkonsole.C  keycodes  konsole-mini.xpm  konsole.kdelnk  konsole.xpm  large-konsole.xpm  linux.desktop  linux.kdelnk  (+18 more)
other/color-schemes/: CMakeLists.txt  Linux.colorscheme
other/icons/: CMakeLists.txt  Makefile.am
other/keyboard-layouts/: CMakeLists.txt  linux.keytab  solaris.keytab
other/profiles/: CMakeLists.txt  Shell.profile
other/sessions/: CMakeLists.txt  mc.desktop  (+1 more)
settings/: CMakeLists.txt  Makefile.am  kcmkonsole.cpp  kcmkonsole.desktop  kcmkonsole.h  kcmkonsoledialog.ui  konsole.desktop  schemadialog.ui  schemaeditor.cpp  schemaeditor.h  sessiondialog.ui  sessioneditor.cpp  sessioneditor.h
src/: AccessibleColorScheme.cpp  AccessibleColorScheme.h  AppColorSchemeChooser.cpp  AppColorSchemeChooser.h  Application.cpp  Application.h  AutoScrollHandler.cpp  BlockArray.C  BlockArray.cpp  BlockArray.h  BookmarkHandler.cpp  BookmarkHandler.h  BookmarkMenu.cpp  BookmarkMenu.h  CMakeLists.txt  Character.h  CharacterColor.h  CharacterFormat.h  CharacterWidth.cpp  CharacterWidth.h  CharacterWidth.src.cpp  CheckableSessionModel.cpp  CheckableSessionModel.h  ColorScheme.cpp  ColorScheme.h  ColorSchemeEditor.cpp  ColorSchemeEditor.h  ColorSchemeEditor.ui  ColorSchemeManager.cpp  ColorSchemeManager.h  ColorSchemeViewDelegate.h  ColorSchemeWallpaper.h  CompactHistoryBlock.h  CompactHistoryBlockList.h  CompactHistoryLine.cpp  CompactHistoryScroll.cpp  CompactHistoryScroll.h  CompactHistoryType.h  CompositeWidgetFocusWatcher.cpp  CompositeWidgetFocusWatcher.h  (+239 more)
tools/: CMakeLists.txt  fontembedder.cpp  konsoleprofile
(+673 files in other folders)
